simple-node-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-node-app
  namespace: simple-node-app
  labels:
    app: simple-node-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: simple-node-app
  template:
    metadata:
      labels:
        app: simple-node-app
    spec:
      containers:
        - name: simple-node-app
          image: precious/simple-node-app:argocd
          # imagePullPolicy: Never
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          resources:
            limits:
              memory: "50Mi"
            requests:
              memory: "50Mi"
              cpu: "250m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
