simple-node-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-node-app-ingress
  namespace: simple-node-app
  # Can use
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: "test.vasconsolutionsapp.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-node-app-clusterip
                port:
                  number: 80
